--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -7,10 +7,12 @@
   --font-size-xx-large: 4.8rem;
 }
 
+/* Set html font size to 62.5% */
 html {
   font-size: 62.5%;
 }
 
+/* Apply font-size-medium to body */
 body {
   font-size: var(--font-size-medium);
 }
