--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -1,5 +1,15 @@
 /* Task: Variables for the font size */
 :root {
+  --color-primary: #d73953;
+  --color-black: #090909;
+  --color-white: #ffffff;
+  --color-light-grey: #f3f3f3;
+  --color-dark-grey: #353535;
+  --text-color: var(--color-black);
+
+  --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
@@ -14,5 +24,11 @@ html {
 
 /* Apply font-size-medium to body */
 body {
+  color: var(--text-color);
+  font-family: var(--font-family-base);
   font-size: var(--font-size-medium);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-family-title);
 }
