--- a/CSS_advanced/styles/8-style.css
+++ b/CSS_advanced/styles/8-style.css
@@ -7,5 +7,9 @@
 
 /* Apply line-height-base to body */
 body {
+  color: var(--text-color);
+  font-family: var(--font-family-base);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-regular);
   line-height: var(--line-height-base);
 }
