--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -7,12 +7,11 @@
   margin: var(--section-tagline-margin);
 }
 
-/* Fix for ul with class row - making sure all default styling is removed */
+/* Completely remove ALL default styling from lists with row class */
 ul.row {
   margin: 0;
   padding: 0;
   list-style: none;
-  list-style-type: none;
 }
 
 .col-1-3 {
